[tool.poetry]
name = "secureboxed-api"
version = "0.1.0"
description = ""
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
readme = "README.md"
packages = [{include = "secureboxed_api"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.112.2"
uvicorn = {version="==0.30.6", extras=["standard"]}
gunicorn = "==23.0.0"
cryptography = "^43.0.0"
python-multipart = "^0.0.9"
shadow-drive = "^0.0.0"
solders = "^0.21.0"
python-dotenv = "^1.0.1"
solana = "^0.34.3"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"
autopep8 = "*"
pytest-cov = "*"
pytest-flask = "*"
httpx = "*"
complexipy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini-options]
python_paths = [".", "tests"]
