[tool.poetry]
name = "sovereign-files"
version = "0.0.1"
description = ""
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
readme = "README.md"
packages = [{include = "sovereign_files"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
cryptography = "^43.0.0"
shadow-drive = "^0.0.0"
solders = "^0.21.0"
solana = "^0.34.3"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"
autopep8 = "*"
pytest-cov = "*"
complexipy = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini-options]
python_paths = [".", "tests"]

[tool.poetry.scripts]
sovereign-files = "sovereign_files.main:cli"
